--- a/JSE_appendix.Rmd
+++ b/JSE_appendix.Rmd
@@ -8,19 +8,12 @@ abstract: >
 date: "`r format(Sys.time(), '%d %B %Y')`"
 url: https://ericmarcon.github.io/JSE_appendix/
 github-repo: ericmarcon/JSE_appendix
-# Language
 lang: en-US
-# Bibliography
 bibliography: references.bib
 biblio-style: chicago
-# LaTeX
-# Print table of contents in PDFs?
 pdftoc: false
-# If true, choose its depth
 toc-depth: 3
-# URL color
 urlcolor: blue
-# Do not modify
 always_allow_html: yes
 csquotes: true
 output:
@@ -73,8 +66,10 @@ Packages <- c("dplyr", "ggplot2", "stringr", "sf", "dbmss")
 InstallPackages(Packages)
 
 # knitr options
+knitr::knit_hooks$set(crop = knitr::hook_pdfcrop)
 knitr::opts_chunk$set(
   cache =   TRUE,     # Cache chunk results
+  crop =    TRUE,     # Crop fig margins in pdf  
   include = TRUE,     # Show/Hide chunks
   echo =    TRUE,     # Show/Hide code
   warning = FALSE,    # Show/Hide warnings
@@ -100,124 +95,12 @@ knitr::opts_chunk$set(dev.args=list(bg="transparent"))
 set.seed(975)
 ```
 
-# Theoretical example: homogeneous controls{#sec:thh}
 
-Analyses rely on the _dbmss_ [@Marcon2014] package for R [@R].
-
-This example completes that of the main text, detailed in section \@ref(sec:thnonh).
-
-## Dataset simulation
-
-We build a point pattern made of cases (the points of interest) and controls (the background distribution of points).
-
-Cases are a Matérn [@Matern1960] point pattern with $\kappa$ (expected) clusters of $\mu$ (expected) points in a circle of radius *scale*.
-Controls are a Poisson point pattern (i.e. complete spatial randomness) of $\lambda$ (expected) points.
-
-```{r}
-library(dplyr)
-library(dbmss)
-# Simulation of cases (clusters)
-rMatClust(kappa = 10, scale = 0.05, mu = 10) %>% 
-  as.wmppp -> 
-  CASES
-CASES$marks$PointType <- "Cases"
-# Number of points
-CASES$n
-
-# Simulation of controls (random distribution)
-rpoispp(lambda = 200) %>% 
-  as.wmppp ->
-  CONTROLS
-CONTROLS$marks$PointType <-"Controls"
-# Number of points
-CONTROLS$n
-
-# Mixed patterns (cases and controls)
-ALL <- superimpose(CASES, CONTROLS)
-autoplot(ALL)
-```
-
-
-## Calculate and plot *M* Cases
-
-```{r}
-# Fix the number of simulations and the level of risk
-NumberOfSimulations <- 1000
-Alpha <- .01
-
-# Calculate and plot M Cases
-ALL %>% 
-  MEnvelope(
-    ReferenceType="Cases", 
-    SimulationType = "RandomLocation",
-    NumberOfSimulations = NumberOfSimulations,
-    Alpha = Alpha,
-    Global = TRUE
-  ) ->
-  M_env_cases
-
-autoplot(M_env_cases)
-```
-The plot shows a clear relative concentration of cases.
-
-
-## Map *M* results
-
-To plot the individual values of *M* around each case, a distance must be chosen.
-Then, the function must be computed at this distance with individual values.
-Finally, a kriged weighted, marked, planar point patterns (`kwmppp`) object is produced and plotted.
-
-```{r}
-# Choose the distance to plot
-Distance <- 0.1
-
-# Calculate the M values to plot
-ALL %>% 
-  Mhat(
-    r = c(0, Distance),
-    ReferenceType = "Cases",
-    NeighborType = "Cases", 
-    Individual = TRUE
-  ) -> 
-  M_TheoEx
-
-# Map resolution
-resolution <- 512
-
-# Create a kriged weighted marked planar point pattern (kwmppp)
-M_TheoEx_map <- kwmppp(
-  ALL, 
-  fvind = M_TheoEx, 
-  ReferenceType ="Cases", 
-  distance = Distance
-)
-
-# Plot the point pattern with values of M(Distance)
-plot(M_TheoEx_map)
-# Add the cases to the map
-points(
-  ALL[ALL$marks$PointType == "Cases"],
-  pch = 20, col = "red"
-)
-```
-
-## Compare with the density of cases
-
-The density of cases is plotted.
-High densities are similar to high relative concentrations in this example because the control points are homogeneously distributed.
-
-```{r}
-plot(density(CASES), main = "")
-points(
-  ALL[ALL$marks$PointType == "Cases"],
-  pch = 20, col = "red"
-)
-```
-
-
-# Theoretical example: non-homogeneuous controls{#sec:thnonh}
+# Theoretical example: non-homogeneous controls{#sec:thnonh}
 
 This section allows reproducing the theoretical example presented in the main text.
+Analyses rely on the _dbmss_ [@Marcon2014] package for R [@R].
+
 
 ## Dataset simulation
 
@@ -314,10 +197,10 @@ points(
 )
 ```
 
-We can see that cases are concentrated everywhere (local *M* value above 1) because we chose a Matérn point pattern.
+We can see that cases are concentrated almost everywhere (local *M* value above 1) because we chose a Matérn point pattern.
 
 The areas with the higher relative concentration are located in the north of the map because the controls are less dense there.
-The southern-most cluster illustrates that the relative concentration of cases, although higher than 1, is clearly lower than that of the northern clusters, which have the same characteristics but are in a less-dense control neighborhood.
+The south-eastern group of points illustrates that the relative concentration of cases can be below 1 when only a few cases are present among many controls.
 
 
 ## Compare with the density of cases
@@ -585,7 +468,6 @@ The *M* statistic is computed to detect the spatial concentration of maple trees
 
 ```{r}
 Distance <- 15
-NumberOfSimulations <- 1000
 trees_2021 %>% 
    MEnvelope(
      r = 0:(10 * Distance) / 5,
@@ -792,7 +674,7 @@ points(
 )
 ```
 
-infested and sane maple trees are significantly concentrated.
+Infested and sane maple trees are significantly concentrated.
 The map shows that the local concentration of maples around infested trees is generally high (warm colors around black points). 
 
 In contrast, decaying trees and maples rather, but non significantly, repulse each others: the intertype $M$ function between them is plotted below:
