--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,35 @@
+@article{Hantsch2014,
+  title = {Tree Diversity and the Role of Non-host Neighbour Tree Species in Reducing Fungal Pathogen Infestation},
+  author = {Hantsch, Lydia and Bien, Steffen and Radatz, Stine and Braun, Uwe and Auge, Harald and Bruelheide, Helge},
+  editor = {Thrall, Peter},
+  year = {2014},
+  month = nov,
+  journal = {Journal of Ecology},
+  volume = {102},
+  number = {6},
+  pages = {1673--1687},
+  issn = {0022-0477, 1365-2745},
+  doi = {10.1111/1365-2745.12317},
+  abstract = {The degree to which plant pathogen infestation occurs in a host plant is expected to be strongly influenced by the level of species diversity among neighbouring host and non-host plant species. Since pathogen infestation can negatively affect host plant performance, it can mediate the effects of local biodiversity on ecosystem functioning.     We tested the effects of tree diversity and the proportion of neighbouring host and non-host species with respect to the foliar fungal pathogens of Tilia cordata and Quercus petraea in the Kreinitz tree diversity experiment in Germany. We hypothesized that fungal pathogen richness increases while infestation decreases with increasing local tree diversity. In addition, we tested whether fungal pathogen richness and infestation are dependent on the proportion of host plant species present or on the proportion of particular non-host neighbouring tree species.     Leaves of the two target species were sampled across three consecutive years with visible foliar fungal pathogens on the leaf surface being identified macro- and microscopically. Effects of diversity among neighbouring trees were analysed: (i) for total fungal species richness and fungal infestation on host trees and (ii) for infestation by individual fungal species.     We detected four and five fungal species on T.~cordata and Q.~petraea, respectively. High local tree diversity reduced (i) total fungal species richness and infestation of T.~cordata and fungal infestation of Q.~petraea and (ii) infestation by three host-specialized fungal pathogen species. These effects were brought about by local tree diversity and were independent of host species proportion. In general, host species proportion had almost no effect on fungal species richness and infestation. Strong effects associated with the proportion of particular non-host neighbouring tree species on fungal species richness and infestation were, however, recorded.     Synthesis. For the first time, we experimentally demonstrated that for two common forestry tree species, foliar fungal pathogen richness and infestation depend on local biodiversity. Thus, local tree diversity can have positive impacts on ecosystem functioning in managed forests by decreasing the level of fungal pathogen infestation.},
+  langid = {english}
+}
+
+@article{Koukol2015,
+  title = {Recent Observations of Sooty Bark Disease of Sycamore Maple in {{Prague}} ({{Czech Republic}}) and the Phylogenetic Placement of {{{\emph{Cryptostroma}}}}{\emph{ Corticale}}},
+  author = {Koukol, O. and Kelnarov{\'a}, I. and {\v C}ern{\'y}, K.},
+  editor = {Woodward, S.},
+  year = {2015},
+  month = feb,
+  journal = {Forest Pathology},
+  volume = {45},
+  number = {1},
+  pages = {21--27},
+  issn = {14374781},
+  doi = {10.1111/efp.12129},
+  abstract = {The anamorphic fungus Cryptostroma corticale (Xylariaceae) causing sooty bark disease (SBD) of Acer pseudoplatanus has been reported within the past decade in several European countries. In the last decade, severe drought conditions during summer also resulted in an outbreak of SBD in park areas in Prague (Czech Republic). Trees with the typical syndromes were recorded in four localities in Prague. Some trees were also located in the alluvial plain of the Vltava River with groundwater available all year long. We suppose that the trees were stressed by full water saturation for several months after flood in 2012 and that SBD was triggered by anoxia and subsequent phytopththora root rot. Sterile fungi isolated from one tree and one lesion were identified as C. corticale based on the similarity of their ITS rDNA sequences with strains of C. corticale in a public collection. Furthermore, C. corticale was placed in the family Xylariaceae within the genus Biscogniauxia based on phylogenetic analysis of four genes (ITS nrDNA, actin, RPB2 and b-tubulin). The closest relatives are B. bartholomei and Graphostroma platystoma.},
+  langid = {english}
+}
+
 @article{Marcon2014,
   title = {Tools to Characterize Point Patterns: Dbmss for {{R}}},
   author = {Marcon, Eric and Traissac, St{\'e}phane and Puech, Florence and Lang, Gabriel},
@@ -6,7 +38,8 @@
   volume = {67},
   number = {3},
   pages = {1--15},
-  doi = {10.18637/jss.v067.c03}
+  doi = {10.18637/jss.v067.c03},
+  abstract = {The dbmss package for R provides an easy-to-use toolbox to characterize the spatial structure of point patterns. Our contribution presents the state of the art of distance-based methods employed in economic geography and which are also used in ecology. Topographic functions such as Ripley's K, absolute functions such as Duranton and Overman's Kd and relative functions such as Marcon and Puech's M are implemented. Their confidence envelopes (including global ones) and tests against counterfactuals are included in the package.}
 }
 
 @article{Matern1960,
@@ -16,7 +49,18 @@
   journal = {Meddelanden fr{\aa}n Statens Skogsforskningsinstitut},
   volume = {49},
   number = {5},
-  pages = {1--144}
+  pages = {1--144},
+  abstract = {This book was first published in 1960 as No. 5 of Volume 49 of Reports of the Forest Research Institute of Sweden. It was at the same time a doctor's thesis in mathematical statistics at Stockholm University. In the second edition, a number of misprints and other errors have been corrected. An author index and a subject index have been added. Finally, a new postscript comments on the later development of the subjects treated in the book. BERTIL MATERN March r{\textcent}6 Acknowledgements The completion of this thesis was facilitated through the generous assist\- ance of several persons and institutions. I would wish to express my sincere gratitude to my teacher, Professor HARALD CRAMtR, now chancellor of the Swedish universities, for his valuable help and encouragement. Sincere thanks are also offered to Professor ULF GRENANDER for kindly reading the first version of the manuscript and giving valuable advice. The thesis has been prepared during two widely separated periods. A preliminary draft of Ch. 2 was written in 1948, whereas the remaining parts were completed in 1959-1960. The work originates from problems which I discussed in a publication in 1947. The problems were assigned to me by Professor MANFRED NASLUND, former head of the Swedish Forest Research Institute, now governor of the province Norrbotten. It is a pleasure to acknowledge my gratefulness to Professor Naslund for his un\- remitting encouragement and interest in my work.}
+}
+
+@book{Matheron1970,
+  title = {La Th{\'e}orie Des Variables Regionalis{\'e}es et Ses Applications},
+  author = {Matheron, Georges},
+  year = {1970},
+  series = {Les Cahiers Du Centre de Morphologie Math{\'e}matique de {{Fontainebleau}}},
+  volume = {5},
+  publisher = {{Ecole Nationale Sup{\'e}rieure des Mines de Paris}},
+  address = {{Fontainebleau}}
 }
 
 @article{Nguyen2016,
@@ -67,5 +111,6 @@
   pages = {173},
   issn = {2309-608X},
   doi = {10.3390/jof7030173},
+  abstract = {Leaf fungal pathogens alter their host species' performance and, thus, changes in fungal species composition can translate into effects at the tree community scale. Conversely, the functional diversity of tree species in a host tree's local neighbourhood can affect the host's foliar fungal infestation. Therefore, understanding the factors that affect fungal infestations is important to advance our understanding of biodiversity-ecosystem functioning (BEF) relationships. Here we make use of the largest BEF tree experiment worldwide, the BEF-China experiment, where we selected tree host species with different neighbour species. Identifying fungal taxa by microscopy and by high-throughput DNA sequencing techniques based on the internal transcribed spacer (ITS) rDNA region, we analysed the fungal richness and infestation rates of our target trees as a function of local species richness. Based on the visual microscopic assessment, we found that a higher tree diversity reduced fungal richness and host-specific fungal infestation in the host's local neighbourhood, while molecular fungal richness was unaffected. This diversity effect was mainly explained by the decrease in host proportion. Thus, the dilution of host species in the local neighbourhood was the primary mechanism in reducing the fungal disease severity. Overall, our study suggests that diverse forests will suffer less from foliar fungal diseases compared to those with lower diversity.},
   langid = {english}
 }
