--- a/JSPE-D-23-00002.Rmd
+++ b/JSPE-D-23-00002.Rmd
@@ -139,7 +139,7 @@ autoplot(ALL)
 
 ```{r}
 # Fix the number of simulations and the level of risk
-NumberOfSimulations <- 1000
+NumberOfSimulations <- 100
 Alpha <- .01
 
 # Calculate and plot M Cases
@@ -182,12 +182,13 @@ ALL %>%
 # Map resolution
 resolution <- 512
 
-# Create a kriged weighted marked planar point pattern (kwmppp)
-M_TheoEx_map <- kwmppp(
+# Create a map by smoothing the local values of M
+M_TheoEx_map <- Smooth(
   ALL, 
   fvind = M_TheoEx, 
-  ReferenceType ="Cases", 
-  distance = Distance
+  distance = Distance,
+  ReferenceType ="Cases",
+  Nbx = resolution, Nby = resolution
 )
 
 # Plot the point pattern with values of M(Distance)
@@ -197,6 +198,8 @@ points(
   ALL[ALL$marks$PointType == "Cases"],
   pch = 20, col = "red"
 )
+# Add contour lines
+contour(M_TheoEx_map, add=TRUE)
 ```
 
 We can see that cases are concentrated almost everywhere (local *M* value above 1) because we chose a Matérn point pattern.
@@ -216,6 +219,50 @@ points(
   pch = 20, col = "red"
 )
 ```
+
+
+## Confidence level
+
+The individual values of *M* can be compared to their distribution under the null hypothesis of radom location, i.e. where all points except for the reference one are shuffled among all actual locations.
+
+The quantiles of the actual values with respect to their null hypothesis distribution can is mapped.
+
+```{r}
+# Calculate the M values to plot with their confidence level
+ALL %>% 
+  Mhat(
+    r = c(0, Distance),
+    ReferenceType = "Cases",
+    NeighborType = "Cases", 
+    Individual = TRUE,
+    Quantiles = TRUE,
+    NumberOfSimulations = NumberOfSimulations,
+    Alpha = Alpha
+  ) -> 
+  M_TheoEx
+
+# Create a map of the quantiles
+M_TheoEx_q_map <- Smooth(
+  ALL, 
+  fvind = M_TheoEx, 
+  distance = Distance,
+  ReferenceType ="Cases",
+  Quantiles = TRUE,
+  Nbx = resolution, Nby = resolution
+)
+
+# Plot the point pattern with values of M(Distance)
+plot(M_TheoEx_q_map)
+# Add the cases to the map
+points(
+  ALL[ALL$marks$PointType == "Cases"],
+  pch = 20, col = "red"
+)
+# Add contour lines of the critical values
+contour(M_TheoEx_map, levels = c(Alpha/2, 1 - Alpha/2), add=TRUE)
+```
+
+The contour lines show the regions where the local *M* value is smaller of greater than the critical values of the simulations, i.e. it is among the 1% extreme values.
 
 
 # Suzanne Lenglen Park
@@ -493,6 +540,50 @@ trees_2021 %>%
   ) ->
   M_ind_Acer
 ```
+
+### Smoothed map
+
+A map is produced by smoothing the individual values.
+To respect the geometry of the map, the ratio of rows to columns of the image to produced is first calculated.
+
+```{r}
+# Window ratio
+ratio <- with(
+  trees_infested$window, 
+  {
+   (yrange[2] - yrange[1]) / (xrange[2] - xrange[1])
+  }
+)
+
+# Smooth the values
+trees_2021 %>% 
+  Smooth(
+    fvind = M_ind_Acer, 
+    distance = Distance, 
+    ReferenceType = "Acer",
+    Quantiles = FALSE,
+    Adjust = 4,
+    Nbx = resolution, Nby = resolution * ratio
+  ) -> map_acer
+
+plot(map_acer)
+# Add contour lines
+contour(map_acer, nlevels = 10, add=TRUE)
+# Add infested trees
+points(
+  trees_infested[trees_infested$marks$PointType == "infested"],
+  pch = 20
+)
+# And decaying trees
+points(
+  trees_infested[trees_infested$marks$PointType == "Decaying"],
+  pch = 4,
+  col = "red"
+)
+```
+
+
+### Kriged map
 
 The map requires krigeing the individual values on a grid of points.
 To build the grid, the size ratio of the spatial window is calculated.
