--- a/JSPE-D-23-00002.Rmd
+++ b/JSPE-D-23-00002.Rmd
@@ -156,7 +156,7 @@ The plot shows a clear relative concentration of cases.
 
 To plot the individual values of *M* around each case, a distance must be chosen.
 Then, the function must be computed at this distance with individual values.
-Finally, a kriged weighted, marked, planar point patterns (`kwmppp`) object is produced and plotted.
+Finally, a map is produced by smoothing the individual values and plotted.
 
 ```{r}
 # Choose the distance to plot
@@ -180,12 +180,11 @@ M_TheoEx_map <- Smooth(
   ALL, 
   fvind = M_TheoEx, 
   distance = Distance,
-  ReferenceType ="Cases",
   Nbx = resolution, Nby = resolution
 )
 
 # Plot the point pattern with values of M(Distance)
-plot(M_TheoEx_map)
+plot(M_TheoEx_map, main = "")
 # Add the cases to the map
 points(
   ALL[ALL$marks$PointType == "Cases"],
@@ -217,8 +216,9 @@ points(
 ## Confidence level
 
 The individual values of *M* can be compared to their distribution under the null hypothesis of radom location, i.e. where all points except for the reference one are shuffled among all actual locations.
+The code is similar to the previous one, except for the `Quantiles` arguments that are set to `TRUE` in `Mhat()` to calculate them (a computer-intensive step) and in `Smooth()` to smooth the quantiles rather than the function values.
 
-The quantiles of the actual values with respect to their null hypothesis distribution can is mapped.
+The quantiles of the actual values with respect to their null hypothesis distribution can be mapped.
 
 ```{r}
 # Calculate the M values to plot with their confidence level
@@ -239,23 +239,24 @@ M_TheoEx_q_map <- Smooth(
   ALL, 
   fvind = M_TheoEx, 
   distance = Distance,
-  ReferenceType ="Cases",
   Quantiles = TRUE,
   Nbx = resolution, Nby = resolution
 )
 
 # Plot the point pattern with values of M(Distance)
-plot(M_TheoEx_q_map)
+plot(M_TheoEx_q_map, main = "")
 # Add the cases to the map
+CASES <- ALL[ALL$marks$PointType == "Cases"]
+points(CASES, pch = 20)
+# Plot high quantiles in red. 
+# Significant values are store in "High" and "Low" attributes of the image
 points(
-  ALL[ALL$marks$PointType == "Cases"],
-  pch = 20, col = "red"
+  CASES[attr(M_TheoEx_q_map, "High")],
+  pch = 20, col = "green"
 )
-# Add contour lines of the critical values
-contour(M_TheoEx_map, levels = c(Alpha/2, 1 - Alpha/2), add=TRUE)
 ```
 
-The contour lines show the regions where the local *M* value is smaller of greater than the critical values of the simulations, i.e. it is among the 1% extreme values.
+The green points have their individual *M* value greater than the critical value of the simulations, i.e. it is in the 0.5% top values.
 
 
 # Suzanne Lenglen Park
@@ -521,6 +522,8 @@ trees_2021 %>%
 autoplot(M_Acer)
 ```
 
+### Map
+
 To map it, individual values must be calculated at the chosen distance, that is 15 meters.
 
 ```{r}
@@ -534,7 +537,6 @@ trees_2021 %>%
   M_ind_Acer
 ```
 
-### Smoothed map
 
 A map is produced by smoothing the individual values.
 To respect the geometry of the map, the ratio of rows to columns of the image to produced is first calculated.
@@ -553,13 +555,11 @@ trees_2021 %>%
   Smooth(
     fvind = M_ind_Acer, 
     distance = Distance, 
-    ReferenceType = "Acer",
     Quantiles = FALSE,
-    Adjust = 4,
     Nbx = resolution, Nby = resolution * ratio
   ) -> map_acer
 
-plot(map_acer)
+plot(map_acer, main = "")
 # Add contour lines
 contour(map_acer, nlevels = 10, add=TRUE)
 # Add infested trees
@@ -575,47 +575,54 @@ points(
 )
 ```
 
-
-### Kriged map
-
-The map requires krigeing the individual values on a grid of points.
-To build the grid, the size ratio of the spatial window is calculated.
-The number of rows and columns of the grid will respect this ratio so that its points are equally spaced.
-
-```{r}
-# Window ratio
-ratio <- with(
-  trees_infested$window, 
-  {
-   (yrange[2] - yrange[1]) / (xrange[2] - xrange[1])
-  }
-)
-# Map resolution: number of columns of the grid.
-resolution <- 512
-```
-
-A kriged weighted, marked, planar point patterns (`kwmppp`) object is produced and plotted.
 Logged trees are added to the map:
 
 - infested trees are black points,
 - Decaying trees are red crosses.
 
-```{r}
-trees_2021 %>% 
-  kwmppp(
-    fvind = M_ind_Acer,
-    distance = Distance,
-    ReferenceType = "Acer",
-    Nbx = resolution,
-    Nby = resolution * ratio
-  ) ->
-map_acer
+Infested trees are present in the areas where maples are concentrated.
 
-plot(map_acer)
+
+### Confidence level
+
+Each individual value of $M$ is compared to its distribution under the null hypothesis of random location of all other points, obtained by Monte-Carlo simulations.
+A map is produced.
+
+```{r}
+# Calculate individual M with quantiles 
+trees_2021 %>% 
+  Mhat(
+    r = c(0, Distance),
+    ReferenceType = "Acer",
+    NeighborType = "Acer", 
+    Individual = TRUE,
+    Quantiles = TRUE,
+    NumberOfSimulations = NumberOfSimulations,
+    Alpha = Alpha
+  ) ->
+  M_ind_Acer
+# Smooth the values
+trees_2021 %>% 
+  Smooth(
+    fvind = M_ind_Acer, 
+    distance = Distance, 
+    Quantiles = TRUE,
+    Adjust = 2,
+    Nbx = resolution, Nby = resolution * ratio
+  ) -> map_acer
+
+plot(map_acer, main = "")
+# Add contour lines
+contour(map_acer, nlevels = 10, add=TRUE)
 # Add infested trees
 points(
   trees_infested[trees_infested$marks$PointType == "infested"],
   pch = 20
+)
+# Significant values are stored in "High" and "Low" attributes of the image
+points(
+  trees_2021[trees_2021$marks$PointType == "Acer"][attr(map_acer, "High")],
+  pch = 20, col = "green"
 )
 # And decaying trees
 points(
@@ -625,7 +632,7 @@ points(
 )
 ```
 
-infested trees are present in the areas where maples are concentrated.
+### Alternative distances
 
 The 15-meter distance has been chosen because it is a plausible distance of contagion between trees.
 A shorter distance, say 6 meters, would be justified as a peak of *M*(distance) but neighbors are scarse at this scale, leading to less statistical power.
@@ -633,7 +640,7 @@ At greater distances, such as 30m, concentration is still significant but neighb
 
 Both alternative distances are tested here.
 
-Considering 6-meter-radius neighborhoods, the map shows that some high and low values of local concentration are not detected:
+Considering 6-meter-radius neighborhoods, the map is difficult to read because it shows local, highly variable, information that hides the main tendencies. 
 
 ```{r, echo = FALSE}
 trees_2021 %>% 
@@ -644,17 +651,18 @@ trees_2021 %>%
      Individual = TRUE
   ) ->
   M_ind_Acer_6
+# Smooth the values
 trees_2021 %>% 
-  kwmppp(
-    fvind = M_ind_Acer_6,
-    distance = 6,
-    ReferenceType = "Acer",
-    Nbx = resolution,
-    Nby = resolution * ratio
-  ) ->
-map_acer_6
+  Smooth(
+    fvind = M_ind_Acer_6, 
+    distance = 6, 
+    Quantiles = FALSE,
+    Nbx = resolution, Nby = resolution * ratio
+  ) -> map_acer_6
 
-plot(map_acer_6)
+plot(map_acer_6, main = "")
+# Add contour lines
+contour(map_acer_6, nlevels = 10, add=TRUE)
 # Add infested trees
 points(
   trees_infested[trees_infested$marks$PointType == "infested"],
@@ -679,17 +687,18 @@ trees_2021 %>%
      Individual = TRUE
   ) ->
   M_ind_Acer_30
+# Smooth the values
 trees_2021 %>% 
-  kwmppp(
-    fvind = M_ind_Acer_30,
-    distance = 30,
-    ReferenceType = "Acer",
-    Nbx = resolution,
-    Nby = resolution * ratio
-  ) ->
-map_acer_30
+  Smooth(
+    fvind = M_ind_Acer_30, 
+    distance = 30, 
+    Quantiles = FALSE,
+    Nbx = resolution, Nby = resolution * ratio
+  ) -> map_acer_30
 
-plot(map_acer_30)
+plot(map_acer_30, main = "")
+# Add contour lines
+contour(map_acer_30, nlevels = 10, add=TRUE)
 # Add infested trees
 points(
   trees_infested[trees_infested$marks$PointType == "infested"],
@@ -703,8 +712,9 @@ points(
 )
 ```
 
-Increasing the distance that defines neighborhoods extends the areas where high or low concentration is detected around the most isolated trees, making them more visible, but blurs them in dense areas, where high and low values overlap and cancel out (e.g. in the south-eastern part of the map).
-So the appropriate distance should be chosen according to the knowledge of the studied process.
+Increasing the distance blurs the information where high and low values overlap and cancel out.
+Low concentration areas, where $M<1$ are masked.
+In conclusion, the appropriate distance should be chosen according to the knowledge of the studied process.
 
 
 ## Concentration of maples around infested trees
@@ -727,32 +737,45 @@ autoplot(M_infested_Acer)
 
 The *M* plot detects a significant concentration of maples around infested maples.
 
+### Map
+
 The map is produced.
 
 ```{r}
 trees_infested %>% 
-   Mhat(
-     ReferenceType = "infested",
-     NeighborType = "Acer", 
-     Individual = TRUE
+  Mhat(
+    ReferenceType = "infested",
+    NeighborType = "Acer", 
+    Individual = TRUE,
+    Quantiles = TRUE,
+    NumberOfSimulations = NumberOfSimulations,
+    Alpha = Alpha
   ) ->
   M_ind_infested_Acer
 
+# Smooth the values
 trees_infested %>% 
-  kwmppp(
-    fvind = M_ind_infested_Acer,
-    distance = Distance,
-    ReferenceType = "infested",
-    Nbx = resolution,
-    Nby = resolution * ratio
-  ) ->
-map_infested_acer
+  Smooth(
+    fvind = M_ind_infested_Acer, 
+    distance = Distance, 
+    Quantiles = TRUE,
+    Adjust = 2,
+    Nbx = resolution, Nby = resolution * ratio
+  ) -> map_infested_acer
 
-plot(map_infested_acer)
+plot(map_infested_acer, main = "")
+# Add contour lines
+contour(map_infested_acer, nlevels = 5, add=TRUE)
+
 # Add infested trees
 points(
   trees_infested[trees_infested$marks$PointType == "infested"],
   pch = 20
+)
+# Significant values are stored in "High" and "Low" attributes of the image
+points(
+  trees_infested[trees_infested$marks$PointType == "Acer"][attr(map_infested_acer, "High")],
+  pch = 20, col = "green"
 )
 # And decaying trees
 points(
