updated reference IDs

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,4 @@
-@article{hantschTreeDiversityRole2014,
+@article{Hantsch2014,
   title = {Tree Diversity and the Role of Non-host Neighbour Tree Species in Reducing Fungal Pathogen Infestation},
   author = {Hantsch, Lydia and Bien, Steffen and Radatz, Stine and Braun, Uwe and Auge, Harald and Bruelheide, Helge},
   editor = {Thrall, Peter},
@@ -14,7 +14,7 @@
   langid = {english}
 }
 
-@article{koukolRecentObservationsSooty2015,
+@article{Koukol2015,
   title = {Recent Observations of Sooty Bark Disease of Sycamore Maple in {{Prague}} ({{Czech Republic}}) and the Phylogenetic Placement of {{{\emph{Cryptostroma}}}}{\emph{ Corticale}}},
   author = {Koukol, O. and Kelnarov{\'a}, I. and {\v C}ern{\'y}, K.},
   editor = {Woodward, S.},
@@ -61,7 +61,7 @@
   address = {{Fontainebleau}}
 }
 
-@article{nguyenFungalDiseaseIncidence2016,
+@article{Nguyen2016,
   title = {Fungal Disease Incidence along Tree Diversity Gradients Depends on Latitude in {{European}} Forests},
   author = {Nguyen, Diem and Castagneyrol, Bastien and Bruelheide, Helge and Bussotti, Filippo and Guyot, Virginie and Jactel, Herv{\'e} and Jaroszewicz, Bogdan and Valladares, Fernando and Stenlid, Jan and Boberg, Johanna},
   year = {2016},
@@ -84,7 +84,7 @@
   address = {{Vienna, Austria}}
 }
 
-@article{ruttenMoreDiverseTree2021,
+@article{Rutten2021,
   title = {More Diverse Tree Communities Promote Foliar Fungal Pathogen Diversity, but Decrease Infestation Rates per Tree Species, in a Subtropical Biodiversity Experiment},
   author = {Rutten, Gemma and H{\"o}nig, Lydia and Schwa{\ss}, Rowena and Braun, Uwe and Saadani, Mariem and Schuldt, Andreas and Michalski, Stefan G. and Bruelheide, Helge},
   editor = {Mommer, Liesje},
@@ -100,7 +100,7 @@
   langid = {english}
 }
 
-@article{saadaniLocalTreeDiversity2021,
+@article{Saadani2021,
   title = {Local {{Tree Diversity Suppresses Foliar Fungal Infestation}} and {{Decreases Morphological}} but {{Not Molecular Richness}} in a {{Young Subtropical Forest}}},
   author = {Saadani, Mariem and H{\"o}nig, Lydia and Bien, Steffen and Koehler, Michael and Rutten, Gemma and Wubet, Tesfaye and Braun, Uwe and Bruelheide, Helge},
   year = {2021},
